trainer_data_files = [
    'trainer_none.json',
    'trainer_youngster_tristan.json',
    'trainer_youngster_logan.json',
    'trainer_lass_natalie.json',
    'trainer_youngster_michael.json',
    'trainer_unknown_005.json',
    'trainer_unknown_006.json',
    'trainer_unknown_007.json',
    'trainer_unknown_008.json',
    'trainer_unknown_009.json',
    'trainer_youngster_tyler.json',
    'trainer_lass_samantha.json',
    'trainer_lass_sarah.json',
    'trainer_bug_catcher_brandon.json',
    'trainer_aroma_lady_taylor.json',
    'trainer_twins_liv_and_liz.json',
    'trainer_camper_jacob.json',
    'trainer_picnicker_siena.json',
    'trainer_hiker_daniel.json',
    'trainer_hiker_nicholas.json',
    'trainer_battle_girl_kelsey.json',
    'trainer_aroma_lady_elizabeth.json',
    'trainer_fisherman_andrew.json',
    'trainer_fisherman_joseph.json',
    'trainer_fisherman_zachary.json',
    'trainer_cyclist_axel.json',
    'trainer_cyclist_james.json',
    'trainer_cyclist_john.json',
    'trainer_cyclist_ryan.json',
    'trainer_cyclist_megan.json',
    'trainer_cyclist_nicole.json',
    'trainer_cyclist_kayla.json',
    'trainer_cyclist_rachel.json',
    'trainer_youngster_austin.json',
    'trainer_camper_anthony.json',
    'trainer_picnicker_lauren.json',
    'trainer_hiker_kevin.json',
    'trainer_hiker_justin.json',
    'trainer_battle_girl_helen.json',
    'trainer_hiker_robert.json',
    'trainer_hiker_alexander.json',
    'trainer_hiker_jonathan.json',
    'trainer_black_belt_kyle.json',
    'trainer_fisherman_cody.json',
    'trainer_aroma_lady_hannah.json',
    'trainer_artist_william.json',
    'trainer_breeder_albert.json',
    'trainer_breeder_jennifer.json',
    'trainer_cowgirl_shelley.json',
    'trainer_jogger_richard.json',
    'trainer_unknown_050.json',
    'trainer_unknown_051.json',
    'trainer_unknown_052.json',
    'trainer_poke_kid_danielle.json',
    'trainer_unknown_054.json',
    'trainer_young_couple_ty_and_sue.json',
    'trainer_breeder_kahlil.json',
    'trainer_breeder_amber.json',
    'trainer_unknown_058.json',
    'trainer_unknown_059.json',
    'trainer_unknown_060.json',
    'trainer_unknown_061.json',
    'trainer_unknown_062.json',
    'trainer_unknown_063.json',
    'trainer_unknown_064.json',
    'trainer_twins_teri_and_tia.json',
    'trainer_ace_trainer_ernest.json',
    'trainer_ace_trainer_alyssa.json',
    'trainer_veteran_brian.json',
    'trainer_black_belt_adam.json',
    'trainer_ninja_boy_joel.json',
    'trainer_ninja_boy_nathan.json',
    'trainer_ninja_boy_davido.json',
    'trainer_dragon_tamer_patrick.json',
    'trainer_bird_keeper_brianna.json',
    'trainer_double_team_zac_and_jen.json',
    'trainer_bird_keeper_alexandra.json',
    'trainer_unknown_077.json',
    'trainer_ninja_boy_zach.json',
    'trainer_black_belt_sean.json',
    'trainer_ninja_boy_nick.json',
    'trainer_bird_keeper_katherine.json',
    'trainer_rich_boy_jason.json',
    'trainer_lady_melissa.json',
    'trainer_gentleman_jeremy.json',
    'trainer_socialite_reina.json',
    'trainer_unknown_086.json',
    'trainer_unknown_087.json',
    'trainer_policeman_bobby.json',
    'trainer_policeman_alex.json',
    'trainer_policeman_dylan.json',
    'trainer_fisherman_juan.json',
    'trainer_fisherman_josh.json',
    'trainer_fisherman_travis.json',
    'trainer_ranger_taylor.json',
    'trainer_ranger_jeffrey.json',
    'trainer_ranger_allison.json',
    'trainer_unknown_097.json',
    'trainer_unknown_098.json',
    'trainer_scientist_stefano.json',
    'trainer_unknown_100.json',
    'trainer_unknown_101.json',
    'trainer_policeman_caleb.json',
    'trainer_swimmer_sheltin.json',
    'trainer_swimmer_evan.json',
    'trainer_swimmer_haley.json',
    'trainer_swimmer_mary.json',
    'trainer_tuber_jared.json',
    'trainer_tuber_chelsea.json',
    'trainer_unknown_109.json',
    'trainer_sailor_paul.json',
    'trainer_fisherman_kenneth.json',
    'trainer_unknown_112.json',
    'trainer_ruin_maniac_bryan.json',
    'trainer_ruin_maniac_ronald.json',
    'trainer_unknown_115.json',
    'trainer_unknown_116.json',
    'trainer_unknown_117.json',
    'trainer_unknown_118.json',
    'trainer_psychic_mitchell.json',
    'trainer_psychic_abigail.json',
    'trainer_pi_carlos.json',
    'trainer_unknown_122.json',
    'trainer_unknown_123.json',
    'trainer_unknown_124.json',
    'trainer_unknown_125.json',
    'trainer_unknown_126.json',
    'trainer_black_belt_gregory.json',
    'trainer_black_belt_derek.json',
    'trainer_black_belt_nathaniel.json',
    'trainer_jogger_scott.json',
    'trainer_unknown_131.json',
    'trainer_ace_trainer_blake.json',
    'trainer_ace_trainer_garrett.json',
    'trainer_ace_trainer_laura.json',
    'trainer_ace_trainer_maria.json',
    'trainer_skier_bradley.json',
    'trainer_skier_edward.json',
    'trainer_skier_kaitlyn.json',
    'trainer_skier_andrea.json',
    'trainer_ace_trainer_dalton.json',
    'trainer_ace_trainer_olivia.json',
    'trainer_skier_shawn.json',
    'trainer_skier_bjorn.json',
    'trainer_skier_lexie.json',
    'trainer_skier_madison.json',
    'trainer_ninja_boy_matthew.json',
    'trainer_ninja_boy_ethan.json',
    'trainer_black_belt_luke.json',
    'trainer_unknown_149.json',
    'trainer_unknown_150.json',
    'trainer_unknown_151.json',
    'trainer_unknown_152.json',
    'trainer_fisherman_miguel.json',
    'trainer_fisherman_luc.json',
    'trainer_unknown_155.json',
    'trainer_unknown_156.json',
    'trainer_unknown_157.json',
    'trainer_unknown_158.json',
    'trainer_swimmer_adrian.json',
    'trainer_swimmer_erik.json',
    'trainer_swimmer_vincent.json',
    'trainer_swimmer_jessica.json',
    'trainer_swimmer_erica.json',
    'trainer_swimmer_katelyn.json',
    'trainer_unknown_165.json',
    'trainer_swimmer_dillon.json',
    'trainer_swimmer_vanessa.json',
    'trainer_fisherman_cory.json',
    'trainer_unknown_169.json',
    'trainer_ace_trainer_jake.json',
    'trainer_ace_trainer_shannon.json',
    'trainer_fisherman_brett.json',
    'trainer_fisherman_alec.json',
    'trainer_fisherman_george.json',
    'trainer_fisherman_cole.json',
    'trainer_unknown_176.json',
    'trainer_unknown_177.json',
    'trainer_unknown_178.json',
    'trainer_unknown_179.json',
    'trainer_sailor_luther.json',
    'trainer_unknown_181.json',
    'trainer_unknown_182.json',
    'trainer_swimmer_wesley.json',
    'trainer_swimmer_ricardo.json',
    'trainer_swimmer_francisco.json',
    'trainer_swimmer_colton.json',
    'trainer_swimmer_troy.json',
    'trainer_swimmer_oscar.json',
    'trainer_swimmer_miranda.json',
    'trainer_swimmer_aubree.json',
    'trainer_swimmer_paige.json',
    'trainer_swimmer_crystal.json',
    'trainer_swimmer_cassandra.json',
    'trainer_swimmer_gabrielle.json',
    'trainer_worker_colin.json',
    'trainer_worker_mason.json',
    'trainer_unknown_197.json',
    'trainer_unknown_198.json',
    'trainer_unknown_199.json',
    'trainer_unknown_200.json',
    'trainer_bug_catcher_jack.json',
    'trainer_bug_catcher_phillip.json',
    'trainer_bug_catcher_donald.json',
    'trainer_lass_briana.json',
    'trainer_psychic_elijah.json',
    'trainer_psychic_lindsey.json',
    'trainer_unknown_207.json',
    'trainer_unknown_208.json',
    'trainer_unknown_209.json',
    'trainer_unknown_210.json',
    'trainer_unknown_211.json',
    'trainer_unknown_212.json',
    'trainer_unknown_213.json',
    'trainer_unknown_214.json',
    'trainer_unknown_215.json',
    'trainer_unknown_216.json',
    'trainer_unknown_217.json',
    'trainer_unknown_218.json',
    'trainer_unknown_219.json',
    'trainer_unknown_220.json',
    'trainer_unknown_221.json',
    'trainer_unknown_222.json',
    'trainer_unknown_223.json',
    'trainer_ace_trainer_omar.json',
    'trainer_ace_trainer_henry.json',
    'trainer_ace_trainer_mariah.json',
    'trainer_ace_trainer_sydney.json',
    'trainer_veteran_edgar.json',
    'trainer_veteran_clayton.json',
    'trainer_dragon_tamer_ondrej.json',
    'trainer_dragon_tamer_clinton.json',
    'trainer_black_belt_david.json',
    'trainer_bird_keeper_hana.json',
    'trainer_psychic_bryce.json',
    'trainer_psychic_valencia.json',
    'trainer_double_team_jo_and_pat.json',
    'trainer_double_team_al_and_kay.json',
    'trainer_unknown_238.json',
    'trainer_unknown_239.json',
    'trainer_veteran_grant.json',
    'trainer_unknown_241.json',
    'trainer_unknown_242.json',
    'trainer_unknown_243.json',
    'trainer_youngster_jonathon.json',
    'trainer_youngster_darius.json',
    'trainer_leader_roark.json',
    'trainer_rival_route_203_piplup.json',
    'trainer_rival_route_203_turtwig.json',
    'trainer_rival_route_203_chimchar.json',
    'trainer_leader_byron.json',
    'trainer_unknown_251.json',
    'trainer_unknown_252.json',
    'trainer_unknown_253.json',
    'trainer_unknown_254.json',
    'trainer_unknown_255.json',
    'trainer_worker_jackson.json',
    'trainer_worker_gary.json',
    'trainer_black_belt_philip.json',
    'trainer_aroma_lady_jenna.json',
    'trainer_aroma_lady_angela.json',
    'trainer_elite_four_aaron.json',
    'trainer_elite_four_bertha.json',
    'trainer_elite_four_flint.json',
    'trainer_elite_four_lucian.json',
    'trainer_camper_curtis.json',
    'trainer_camper_drew.json',
    'trainer_champion_cynthia.json',
    'trainer_ace_trainer_sergio.json',
    'trainer_ace_trainer_isaiah.json',
    'trainer_ace_trainer_savannah.json',
    'trainer_ace_trainer_alicia.json',
    'trainer_collector_douglas.json',
    'trainer_collector_brady.json',
    'trainer_collector_ivan.json',
    'trainer_collector_fernando.json',
    'trainer_collector_edwin.json',
    'trainer_dragon_tamer_hayden.json',
    'trainer_ace_trainer_dennis.json',
    'trainer_ace_trainer_cesar.json',
    'trainer_ace_trainer_allen.json',
    'trainer_ace_trainer_zachery.json',
    'trainer_ace_trainer_ruben.json',
    'trainer_ace_trainer_breanna.json',
    'trainer_ace_trainer_catherine.json',
    'trainer_ace_trainer_destiny.json',
    'trainer_ace_trainer_jamie.json',
    'trainer_ace_trainer_maya.json',
    'trainer_psychic_maxwell.json',
    'trainer_psychic_brittney.json',
    'trainer_belle_and_pa_ava_and_matt.json',
    'trainer_unknown_291.json',
    'trainer_rancher_marco.json',
    'trainer_fisherman_erick.json',
    'trainer_twins_emma_and_lil.json',
    'trainer_commander_mars_valley_windworks.json',
    'trainer_galactic_grunt_floaroma_meadow_1.json',
    'trainer_galactic_grunt_floaroma_meadow_2.json',
    'trainer_galactic_grunt_valley_windworks_2.json',
    'trainer_galactic_grunt_valley_windworks_3.json',
    'trainer_guitarist_tony.json',
    'trainer_guitarist_jerry.json',
    'trainer_guitarist_preston.json',
    'trainer_guitarist_lonnie.json',
    'trainer_ruin_maniac_calvin.json',
    'trainer_ruin_maniac_larry.json',
    'trainer_jogger_wyatt.json',
    'trainer_jogger_craig.json',
    'trainer_jogger_raul.json',
    'trainer_black_belt_colby.json',
    'trainer_black_belt_darren.json',
    'trainer_black_belt_rafael.json',
    'trainer_black_belt_jeffery.json',
    'trainer_black_belt_carl.json',
    'trainer_black_belt_ricky.json',
    'trainer_leader_gardenia.json',
    'trainer_leader_wake.json',
    'trainer_leader_maylene.json',
    'trainer_leader_fantina.json',
    'trainer_leader_candice.json',
    'trainer_leader_volkner.json',
    'trainer_unknown_321.json',
    'trainer_lass_madeline.json',
    'trainer_lass_kaitlin.json',
    'trainer_lass_caroline.json',
    'trainer_lass_molly.json',
    'trainer_hiker_louis.json',
    'trainer_parasol_lady_alexa.json',
    'trainer_parasol_lady_sabrina.json',
    'trainer_picnicker_diana.json',
    'trainer_picnicker_cheyenne.json',
    'trainer_poke_kid_meghan.json',
    'trainer_policeman_danny.json',
    'trainer_policeman_thomas.json',
    'trainer_unknown_334.json',
    'trainer_rich_boy_trey.json',
    'trainer_unknown_336.json',
    'trainer_sailor_marc.json',
    'trainer_sailor_skyler.json',
    'trainer_sailor_damian.json',
    'trainer_school_kid_chance.json',
    'trainer_school_kid_forrest.json',
    'trainer_school_kid_harrison.json',
    'trainer_school_kid_mackenzie.json',
    'trainer_school_kid_tiera.json',
    'trainer_school_kid_christine.json',
    'trainer_beauty_cyndy.json',
    'trainer_unknown_347.json',
    'trainer_beauty_lindsay.json',
    'trainer_unknown_349.json',
    'trainer_unknown_350.json',
    'trainer_unknown_351.json',
    'trainer_unknown_352.json',
    'trainer_unknown_353.json',
    'trainer_unknown_354.json',
    'trainer_youngster_dallas.json',
    'trainer_youngster_sebastian.json',
    'trainer_youngster_donny.json',
    'trainer_tuber_trenton.json',
    'trainer_tuber_conner.json',
    'trainer_tuber_mariel.json',
    'trainer_tuber_holly.json',
    'trainer_veteran_armando.json',
    'trainer_unknown_363.json',
    'trainer_unknown_364.json',
    'trainer_unknown_365.json',
    'trainer_waitress_kati.json',
    'trainer_worker_gerardo.json',
    'trainer_unknown_368.json',
    'trainer_unknown_369.json',
    'trainer_unknown_370.json',
    'trainer_unknown_371.json',
    'trainer_battle_girl_tyler.json',
    'trainer_bird_keeper_autumn.json',
    'trainer_unknown_374.json',
    'trainer_unknown_375.json',
    'trainer_unknown_376.json',
    'trainer_camper_zackary.json',
    'trainer_camper_lawrence.json',
    'trainer_camper_diego.json',
    'trainer_camper_parker.json',
    'trainer_collector_dean.json',
    'trainer_collector_jamal.json',
    'trainer_collector_terry.json',
    'trainer_unknown_384.json',
    'trainer_unknown_385.json',
    'trainer_dragon_tamer_joe.json',
    'trainer_unknown_387.json',
    'trainer_ace_trainer_jonah.json',
    'trainer_ace_trainer_micah.json',
    'trainer_ace_trainer_arthur.json',
    'trainer_unknown_391.json',
    'trainer_ace_trainer_brenda.json',
    'trainer_ace_trainer_brandi.json',
    'trainer_ace_trainer_clarice.json',
    'trainer_psychic_kody.json',
    'trainer_psychic_landon.json',
    'trainer_psychic_deandre.json',
    'trainer_psychic_rachael.json',
    'trainer_psychic_desiree.json',
    'trainer_psychic_kendra.json',
    'trainer_fisherman_walter.json',
    'trainer_unknown_402.json',
    'trainer_galactic_boss_cyrus_galactic_hq.json',
    'trainer_galactic_boss_cyrus_distortion_world.json',
    'trainer_commander_mars_lake_verity.json',
    'trainer_commander_jupiter_team_galactic_eterna_building.json',
    'trainer_commander_jupiter_spear_pillar.json',
    'trainer_commander_saturn_valor_cavern.json',
    'trainer_commander_saturn_galactic_hq.json',
    'trainer_galactic_grunt_team_galactic_eterna_building_1f_1.json',
    'trainer_unknown_411.json',
    'trainer_galactic_grunt_team_galactic_eterna_building_2f_1.json',
    'trainer_unknown_413.json',
    'trainer_galactic_grunt_jubilife_city_1.json',
    'trainer_galactic_grunt_jubilife_city_2.json',
    'trainer_galactic_grunt_celestic_town.json',
    'trainer_galactic_grunt_lake_valor_1.json',
    'trainer_galactic_grunt_lake_valor_2.json',
    'trainer_galactic_grunt_lake_verity_1.json',
    'trainer_galactic_grunt_lake_verity_3.json',
    'trainer_galactic_grunt_team_galactic_eterna_building_1f_2.json',
    'trainer_galactic_grunt_team_galactic_eterna_building_2f_2.json',
    'trainer_galactic_grunt_team_galactic_eterna_building_3f.json',
    'trainer_unknown_424.json',
    'trainer_galactic_grunt_lake_valor_3.json',
    'trainer_galactic_grunt_lake_verity_2.json',
    'trainer_galactic_grunt_lake_verity_4.json',
    'trainer_galactic_grunt_galactic_hq_1f.json',
    'trainer_unknown_429.json',
    'trainer_galactic_grunt_galactic_hq_2f_3.json',
    'trainer_unknown_431.json',
    'trainer_unknown_432.json',
    'trainer_unknown_433.json',
    'trainer_unknown_434.json',
    'trainer_unknown_435.json',
    'trainer_unknown_436.json',
    'trainer_unknown_437.json',
    'trainer_unknown_438.json',
    'trainer_unknown_439.json',
    'trainer_unknown_440.json',
    'trainer_unknown_441.json',
    'trainer_ruin_maniac_harry.json',
    'trainer_ruin_maniac_gerald.json',
    'trainer_black_belt_miles.json',
    'trainer_black_belt_kendal.json',
    'trainer_black_belt_eddie.json',
    'trainer_black_belt_willie.json',
    'trainer_unknown_448.json',
    'trainer_unknown_449.json',
    'trainer_lass_cassidy.json',
    'trainer_hiker_theodore.json',
    'trainer_hiker_damon.json',
    'trainer_hiker_maurice.json',
    'trainer_hiker_reginald.json',
    'trainer_hiker_lorenzo.json',
    'trainer_picnicker_karina.json',
    'trainer_picnicker_summer.json',
    'trainer_picnicker_tori.json',
    'trainer_picnicker_ana.json',
    'trainer_unknown_460.json',
    'trainer_unknown_461.json',
    'trainer_unknown_462.json',
    'trainer_unknown_463.json',
    'trainer_unknown_464.json',
    'trainer_unknown_465.json',
    'trainer_unknown_466.json',
    'trainer_unknown_467.json',
    'trainer_unknown_468.json',
    'trainer_unknown_469.json',
    'trainer_rival_route_209_piplup.json',
    'trainer_rival_route_209_turtwig.json',
    'trainer_rival_route_209_chimchar.json',
    'trainer_rival_pastoria_city_piplup.json',
    'trainer_rival_pastoria_city_turtwig.json',
    'trainer_rival_pastoria_city_chimchar.json',
    'trainer_rival_canalave_city_piplup.json',
    'trainer_rival_canalave_city_turtwig.json',
    'trainer_rival_canalave_city_chimchar.json',
    'trainer_rival_pokemon_league_piplup.json',
    'trainer_rival_pokemon_league_turtwig.json',
    'trainer_rival_pokemon_league_chimchar.json',
    'trainer_sailor_zachariah.json',
    'trainer_sailor_samson.json',
    'trainer_unknown_484.json',
    'trainer_unknown_485.json',
    'trainer_scientist_shaun.json',
    'trainer_unknown_487.json',
    'trainer_ninja_boy_fabian.json',
    'trainer_ninja_boy_brennan.json',
    'trainer_ninja_boy_bruce.json',
    'trainer_beauty_devon.json',
    'trainer_beauty_nicola.json',
    'trainer_unknown_493.json',
    'trainer_swimmer_claire.json',
    'trainer_unknown_495.json',
    'trainer_youngster_wayne.json',
    'trainer_tuber_jacky.json',
    'trainer_tuber_caitlyn.json',
    'trainer_veteran_terrell.json',
    'trainer_veteran_brenden.json',
    'trainer_unknown_501.json',
    'trainer_unknown_502.json',
    'trainer_worker_noel.json',
    'trainer_worker_braden.json',
    'trainer_worker_brendon.json',
    'trainer_worker_quentin.json',
    'trainer_galactic_grunt_galactic_hq_b2f_1.json',
    'trainer_galactic_grunt_galactic_hq_b2f_2.json',
    'trainer_galactic_grunt_galactic_hq_3f_1.json',
    'trainer_galactic_grunt_galactic_hq_2f_1.json',
    'trainer_unknown_511.json',
    'trainer_galactic_grunt_galactic_hq_3f_2.json',
    'trainer_galactic_grunt_galactic_hq_2f_2.json',
    'trainer_galactic_grunt_galactic_hq_3f_3.json',
    'trainer_galactic_grunt_mt_coronet_3f_1.json',
    'trainer_galactic_grunt_mt_coronet_4f_1.json',
    'trainer_galactic_grunt_mt_coronet_4f_2.json',
    'trainer_galactic_grunt_mt_coronet_tunnel_room_1.json',
    'trainer_galactic_grunt_mt_coronet_tunnel_room_2.json',
    'trainer_galactic_grunt_mt_coronet_5f_1.json',
    'trainer_galactic_grunt_spear_pillar_1.json',
    'trainer_galactic_grunt_galactic_hq_3f_4.json',
    'trainer_galactic_grunt_mt_coronet__3f_1.json',
    'trainer_galactic_grunt_mt_coronet_tunnel_room_3.json',
    'trainer_galactic_grunt_mt_coronet_5f_2.json',
    'trainer_galactic_grunt_mt_coronet_6f.json',
    'trainer_galactic_grunt_spear_pillar_2.json',
    'trainer_commander_mars_spear_pillar.json',
    'trainer_roughneck_kirby.json',
    'trainer_pokefan_leonard.json',
    'trainer_pokefan_rebekah.json',
    'trainer_youngster_oliver.json',
    'trainer_belle_and_pa_beth_and_bob.json',
    'trainer_young_couple_mike_and_nat.json',
    'trainer_aroma_lady_alison.json',
    'trainer_artist_ismael.json',
    'trainer_breeder_kaylee.json',
    'trainer_cameraman_darryl.json',
    'trainer_collector_eugene.json',
    'trainer_pokefan_meredith.json',
    'trainer_pi_kendrick.json',
    'trainer_gentleman_leonardo.json',
    'trainer_socialite_rebecca.json',
    'trainer_lass_blythe.json',
    'trainer_rich_boy_roman.json',
    'trainer_lady_kylie.json',
    'trainer_reporters_valerie.json',
    'trainer_school_kid_esteban.json',
    'trainer_scientist_emilio.json',
    'trainer_beauty_gabriella.json',
    'trainer_beauty_harley.json',
    'trainer_veteran_emanuel.json',
    'trainer_ruin_maniac_karl.json',
    'trainer_bird_keeper_audrey.json',
    'trainer_bird_keeper_geneva.json',
    'trainer_bird_keeper_krystal.json',
    'trainer_dragon_tamer_geoffrey.json',
    'trainer_dragon_tamer_darien.json',
    'trainer_dragon_tamer_keegan.json',
    'trainer_dragon_tamer_stanley.json',
    'trainer_dragon_tamer_drake.json',
    'trainer_dragon_tamer_kenny.json',
    'trainer_ace_trainer_rodolfo.json',
    'trainer_ace_trainer_saul.json',
    'trainer_ace_trainer_jose.json',
    'trainer_ace_trainer_felix.json',
    'trainer_ace_trainer_quinn.json',
    'trainer_ace_trainer_graham.json',
    'trainer_ace_trainer_keenan.json',
    'trainer_ace_trainer_stefan.json',
    'trainer_ace_trainer_skylar.json',
    'trainer_ace_trainer_abel.json',
    'trainer_ace_trainer_deanna.json',
    'trainer_ace_trainer_moira.json',
    'trainer_ace_trainer_dana.json',
    'trainer_ace_trainer_mikayla.json',
    'trainer_ace_trainer_meagan.json',
    'trainer_ace_trainer_sandra.json',
    'trainer_ace_trainer_kassandra.json',
    'trainer_ace_trainer_jasmin.json',
    'trainer_ace_trainer_natasha.json',
    'trainer_ace_trainer_monique.json',
    'trainer_psychic_corbin.json',
    'trainer_psychic_sterling.json',
    'trainer_psychic_daisy.json',
    'trainer_psychic_chelsey.json',
    'trainer_black_belt_davon.json',
    'trainer_black_belt_griffin.json',
    'trainer_black_belt_ray.json',
    'trainer_black_belt_jarrett.json',
    'trainer_ranger_kyler.json',
    'trainer_ranger_deshawn.json',
    'trainer_ranger_dwayne.json',
    'trainer_ranger_ashlee.json',
    'trainer_ranger_felicia.json',
    'trainer_ranger_krista.json',
    'trainer_swimmer_glenn.json',
    'trainer_swimmer_kurt.json',
    'trainer_swimmer_sam.json',
    'trainer_swimmer_wade.json',
    'trainer_swimmer_joanna.json',
    'trainer_swimmer_sophia.json',
    'trainer_swimmer_mallory.json',
    'trainer_swimmer_lydia.json',
    'trainer_unknown_605.json',
    'trainer_veteran_harlan.json',
    'trainer_rival_spear_pillar_piplup.json',
    'trainer_cheryl_eterna_forest.json',
    'trainer_riley_iron_island.json',
    'trainer_marley_victory_road.json',
    'trainer_buck_stark_mountain.json',
    'trainer_mira_wayward_cave.json',
    'trainer_lucas_jubilife_city_chimchar.json',
    'trainer_lucas_jubilife_city_piplup.json',
    'trainer_lucas_jubilife_city_turtwig.json',
    'trainer_dawn_jubilife_city_chimchar.json',
    'trainer_dawn_jubilife_city_piplup.json',
    'trainer_dawn_jubilife_city_turtwig.json',
    'trainer_rival_spear_pillar_turtwig.json',
    'trainer_rival_spear_pillar_chimchar.json',
    'trainer_lucas_veilstone_city_chimchar.json',
    'trainer_lucas_veilstone_city_piplup.json',
    'trainer_lucas_veilstone_city_turtwig.json',
    'trainer_dawn_veilstone_city_chimchar.json',
    'trainer_dawn_veilstone_city_piplup.json',
    'trainer_dawn_veilstone_city_turtwig.json',
    'trainer_aroma_lady_elizabeth_rematch_1.json',
    'trainer_aroma_lady_elizabeth_rematch_2.json',
    'trainer_aroma_lady_elizabeth_rematch_3.json',
    'trainer_artist_william_rematch_1.json',
    'trainer_artist_william_rematch_2.json',
    'trainer_artist_william_rematch_3.json',
    'trainer_battle_girl_helen_rematch_1.json',
    'trainer_battle_girl_helen_rematch_2.json',
    'trainer_battle_girl_helen_rematch_3.json',
    'trainer_bird_keeper_brianna_rematch_1.json',
    'trainer_bird_keeper_brianna_rematch_2.json',
    'trainer_bird_keeper_audrey_rematch.json',
    'trainer_breeder_albert_rematch_1.json',
    'trainer_breeder_albert_rematch_2.json',
    'trainer_breeder_albert_rematch_3.json',
    'trainer_breeder_jennifer_rematch_1.json',
    'trainer_breeder_jennifer_rematch_2.json',
    'trainer_breeder_jennifer_rematch_3.json',
    'trainer_camper_zackary_rematch_1.json',
    'trainer_camper_zackary_rematch_2.json',
    'trainer_camper_zackary_rematch_3.json',
    'trainer_ace_trainer_dalton_rematch.json',
    'trainer_ace_trainer_olivia_rematch.json',
    'trainer_collector_ivan_rematch.json',
    'trainer_unknown_651.json',
    'trainer_unknown_652.json',
    'trainer_cyclist_john_rematch_1.json',
    'trainer_cyclist_john_rematch_2.json',
    'trainer_cyclist_john_rematch_3.json',
    'trainer_cyclist_kayla_rematch_1.json',
    'trainer_cyclist_kayla_rematch_2.json',
    'trainer_cyclist_kayla_rematch_3.json',
    'trainer_dragon_tamer_patrick_rematch_1.json',
    'trainer_dragon_tamer_patrick_rematch_2.json',
    'trainer_dragon_tamer_hayden_rematch.json',
    'trainer_dragon_tamer_geoffrey_rematch.json',
    'trainer_ace_trainer_jake_rematch.json',
    'trainer_ace_trainer_dennis_rematch_1.json',
    'trainer_ace_trainer_dennis_rematch_2.json',
    'trainer_ace_trainer_rodolfo_rematch.json',
    'trainer_ace_trainer_saul_rematch.json',
    'trainer_ace_trainer_shannon_rematch.json',
    'trainer_ace_trainer_maya_rematch_1.json',
    'trainer_ace_trainer_maya_rematch_2.json',
    'trainer_ace_trainer_deanna_rematch.json',
    'trainer_ace_trainer_moira_rematch.json',
    'trainer_psychic_mitchell_rematch_1.json',
    'trainer_psychic_mitchell_rematch_2.json',
    'trainer_psychic_maxwell_rematch.json',
    'trainer_psychic_corbin_rematch.json',
    'trainer_psychic_abigail_rematch_1.json',
    'trainer_psychic_abigail_rematch_2.json',
    'trainer_psychic_brittney_rematch.json',
    'trainer_psychic_daisy_rematch.json',
    'trainer_rancher_marco_rematch_1.json',
    'trainer_rancher_marco_rematch_2.json',
    'trainer_fisherman_joseph_rematch_1.json',
    'trainer_fisherman_joseph_rematch_2.json',
    'trainer_fisherman_miguel_rematch.json',
    'trainer_fisherman_alec_rematch.json',
    'trainer_twins_teri_and_tia_rematch_1.json',
    'trainer_twins_teri_and_tia_rematch_2.json',
    'trainer_pi_carlos_rematch_1.json',
    'trainer_pi_carlos_rematch_2.json',
    'trainer_gentleman_jeremy_rematch_1.json',
    'trainer_gentleman_jeremy_rematch_2.json',
    'trainer_gentleman_jeremy_rematch_3.json',
    'trainer_guitarist_tony_rematch.json',
    'trainer_ruin_maniac_harry_rematch_1.json',
    'trainer_ruin_maniac_harry_rematch_2.json',
    'trainer_jogger_craig_rematch_1.json',
    'trainer_jogger_craig_rematch_2.json',
    'trainer_black_belt_philip_rematch.json',
    'trainer_black_belt_davon_rematch.json',
    'trainer_socialite_reina_rematch_1.json',
    'trainer_socialite_reina_rematch_2.json',
    'trainer_lass_samantha_rematch_1.json',
    'trainer_lass_samantha_rematch_2.json',
    'trainer_lass_samantha_rematch_3.json',
    'trainer_lass_madeline_rematch_1.json',
    'trainer_lass_madeline_rematch_2.json',
    'trainer_lass_madeline_rematch_3.json',
    'trainer_hiker_theodore_rematch_1.json',
    'trainer_hiker_theodore_rematch_2.json',
    'trainer_hiker_theodore_rematch_3.json',
    'trainer_bug_catcher_brandon_rematch_1.json',
    'trainer_bug_catcher_brandon_rematch_2.json',
    'trainer_bug_catcher_brandon_rematch_3.json',
    'trainer_parasol_lady_alexa_rematch_1.json',
    'trainer_parasol_lady_alexa_rematch_2.json',
    'trainer_parasol_lady_alexa_rematch_3.json',
    'trainer_picnicker_karina_rematch_1.json',
    'trainer_picnicker_karina_rematch_2.json',
    'trainer_picnicker_karina_rematch_3.json',
    'trainer_poke_kid_danielle_rematch_1.json',
    'trainer_poke_kid_danielle_rematch_2.json',
    'trainer_poke_kid_danielle_rematch_3.json',
    'trainer_policeman_danny_rematch_1.json',
    'trainer_policeman_danny_rematch_2.json',
    'trainer_policeman_danny_rematch_3.json',
    'trainer_rich_boy_trey_rematch_1.json',
    'trainer_rich_boy_trey_rematch_2.json',
    'trainer_lady_melissa_rematch_1.json',
    'trainer_lady_melissa_rematch_2.json',
    'trainer_lady_melissa_rematch_3.json',
    'trainer_ranger_taylor_rematch_1.json',
    'trainer_ranger_taylor_rematch_2.json',
    'trainer_ranger_taylor_rematch_3.json',
    'trainer_ranger_kyler_rematch.json',
    'trainer_ranger_allison_rematch_1.json',
    'trainer_ranger_allison_rematch_2.json',
    'trainer_ranger_allison_rematch_3.json',
    'trainer_ranger_ashlee_rematch.json',
    'trainer_sailor_marc_rematch_1.json',
    'trainer_sailor_marc_rematch_2.json',
    'trainer_sailor_zachariah_rematch.json',
    'trainer_scientist_shaun_rematch_1.json',
    'trainer_scientist_shaun_rematch_2.json',
    'trainer_scientist_shaun_rematch_3.json',
    'trainer_ninja_boy_zach_rematch_1.json',
    'trainer_ninja_boy_zach_rematch_2.json',
    'trainer_ninja_boy_zach_rematch_3.json',
    'trainer_beauty_cyndy_rematch_1.json',
    'trainer_beauty_cyndy_rematch_2.json',
    'trainer_skier_edward_rematch_1.json',
    'trainer_skier_edward_rematch_2.json',
    'trainer_skier_bjorn_rematch_1.json',
    'trainer_skier_bjorn_rematch_2.json',
    'trainer_skier_andrea_rematch_1.json',
    'trainer_skier_andrea_rematch_2.json',
    'trainer_skier_madison_rematch_1.json',
    'trainer_skier_madison_rematch_2.json',
    'trainer_swimmer_wesley_rematch.json',
    'trainer_swimmer_francisco_rematch.json',
    'trainer_swimmer_glenn_rematch.json',
    'trainer_swimmer_miranda_rematch.json',
    'trainer_swimmer_crystal_rematch.json',
    'trainer_swimmer_joanna_rematch.json',
    'trainer_youngster_tristan_rematch_1.json',
    'trainer_youngster_tristan_rematch_2.json',
    'trainer_youngster_tristan_rematch_3.json',
    'trainer_youngster_dallas_rematch_1.json',
    'trainer_youngster_dallas_rematch_2.json',
    'trainer_youngster_dallas_rematch_3.json',
    'trainer_tuber_jared_rematch_1.json',
    'trainer_tuber_jared_rematch_2.json',
    'trainer_tuber_chelsea_rematch_1.json',
    'trainer_veteran_brian_rematch_1.json',
    'trainer_tuber_chelsea_rematch_2.json',
    'trainer_veteran_brian_rematch_2.json',
    'trainer_veteran_armando_rematch.json',
    'trainer_unknown_778.json',
    'trainer_unknown_779.json',
    'trainer_unknown_780.json',
    'trainer_unknown_781.json',
    'trainer_unknown_782.json',
    'trainer_unknown_783.json',
    'trainer_unknown_784.json',
    'trainer_unknown_785.json',
    'trainer_unknown_786.json',
    'trainer_unknown_787.json',
    'trainer_unknown_788.json',
    'trainer_unknown_789.json',
    'trainer_unknown_790.json',
    'trainer_unknown_791.json',
    'trainer_unknown_792.json',
    'trainer_unknown_793.json',
    'trainer_unknown_794.json',
    'trainer_unknown_795.json',
    'trainer_unknown_796.json',
    'trainer_unknown_797.json',
    'trainer_unknown_798.json',
    'trainer_unknown_799.json',
    'trainer_unknown_800.json',
    'trainer_unknown_801.json',
    'trainer_unknown_802.json',
    'trainer_unknown_803.json',
    'trainer_unknown_804.json',
    'trainer_unknown_805.json',
    'trainer_unknown_806.json',
    'trainer_unknown_807.json',
    'trainer_unknown_808.json',
    'trainer_unknown_809.json',
    'trainer_unknown_810.json',
    'trainer_unknown_811.json',
    'trainer_unknown_812.json',
    'trainer_unknown_813.json',
    'trainer_unknown_814.json',
    'trainer_unknown_815.json',
    'trainer_unknown_816.json',
    'trainer_unknown_817.json',
    'trainer_unknown_818.json',
    'trainer_unknown_819.json',
    'trainer_unknown_820.json',
    'trainer_unknown_821.json',
    'trainer_unknown_822.json',
    'trainer_unknown_823.json',
    'trainer_unknown_824.json',
    'trainer_unknown_825.json',
    'trainer_unknown_828.json',
    'trainer_ace_trainer_anton.json',
    'trainer_ace_trainer_brenna.json',
    'trainer_scientist_darrius.json',
    'trainer_scientist_fredrick.json',
    'trainer_scientist_travon.json',
    'trainer_poke_kid_janet.json',
    'trainer_unknown_833.json',
    'trainer_unknown_834.json',
    'trainer_galactic_grunt_iron_island_1.json',
    'trainer_galactic_grunt_iron_island_2.json',
    'trainer_rival_survival_area_1_piplup.json',
    'trainer_rival_survival_area_1_turtwig.json',
    'trainer_rival_survival_area_1_chimchar.json',
    'trainer_unknown_840.json',
    'trainer_unknown_841.json',
    'trainer_unknown_842.json',
    'trainer_galactic_grunt_valley_windworks_1.json',
    'trainer_worker_dillan.json',
    'trainer_worker_holden.json',
    'trainer_worker_conrad.json',
    'trainer_galactic_grunt_valor_lakefront.json',
    'trainer_galactic_grunt_veilstone_city_1.json',
    'trainer_galactic_grunt_veilstone_city_2.json',
    'trainer_rival_route_201_piplup.json',
    'trainer_rival_route_201_turtwig.json',
    'trainer_rival_route_201_chimchar.json',
    'trainer_leader_candice_rematch.json',
    'trainer_leader_maylene_rematch.json',
    'trainer_leader_volkner_rematch.json',
    'trainer_leader_byron_rematch.json',
    'trainer_leader_gardenia_rematch.json',
    'trainer_leader_roark_rematch.json',
    'trainer_leader_wake_rematch.json',
    'trainer_leader_fantina_rematch.json',
    'trainer_riley_battleground.json',
    'trainer_buck_battleground.json',
    'trainer_marley_battleground.json',
    'trainer_mira_battleground.json',
    'trainer_cheryl_battleground.json',
    'trainer_elite_four_aaron_rematch.json',
    'trainer_elite_four_bertha_rematch.json',
    'trainer_elite_four_flint_rematch.json',
    'trainer_elite_four_lucian_rematch.json',
    'trainer_champion_cynthia_rematch.json',
    'trainer_rival_survival_area_2_piplup.json',
    'trainer_rival_survival_area_2_turtwig.json',
    'trainer_rival_survival_area_2_chimchar.json',
    'trainer_cameraman_tevin.json',
    'trainer_cameraman_tevin_rematch_1.json',
    'trainer_cameraman_tevin_rematch_2.json',
    'trainer_guitarist_arturo.json',
    'trainer_guitarist_arturo_rematch_1.json',
    'trainer_guitarist_arturo_rematch_2.json',
    'trainer_idol_grace.json',
    'trainer_idol_grace_rematch_1.json',
    'trainer_idol_grace_rematch_2.json',
    'trainer_interviewers_roxy_and_oli.json',
    'trainer_interviewers_roxy_and_oli_rematch_1.json',
    'trainer_interviewers_roxy_and_oli_rematch_2.json',
    'trainer_clown_lee.json',
    'trainer_clown_lee_rematch_1.json',
    'trainer_clown_lee_rematch_2.json',
    'trainer_poke_kid_ariel.json',
    'trainer_poke_kid_ariel_rematch_1.json',
    'trainer_poke_kid_ariel_rematch_2.json',
    'trainer_rich_boy_liam.json',
    'trainer_lady_celeste.json',
    'trainer_reporters_kinsey.json',
    'trainer_reporters_kinsey_rematch_1.json',
    'trainer_reporters_kinsey_rematch_2.json',
    'trainer_maid_belinda.json',
    'trainer_maid_sophie.json',
    'trainer_maid_emily.json',
    'trainer_maid_elena.json',
    'trainer_maid_clare.json',
    'trainer_unknown_902.json',
    'trainer_unknown_903.json',
    'trainer_unknown_904.json',
    'trainer_unknown_905.json',
    'trainer_cameraman_tevin_rematch_3.json',
    'trainer_guitarist_arturo_rematch_3.json',
    'trainer_idol_grace_rematch_3.json',
    'trainer_interviewers_roxy_and_oli_rematch_3.json',
    'trainer_clown_lee_rematch_3.json',
    'trainer_poke_kid_ariel_rematch_3.json',
    'trainer_reporters_kinsey_rematch_3.json',
    'trainer_galactic_boss_cyrus_celestic_town_ruins.json',
    'trainer_cameraman_tevin_rematch_4.json',
    'trainer_guitarist_arturo_rematch_4.json',
    'trainer_idol_grace_rematch_4.json',
    'trainer_interviewers_roxy_and_oli_rematch_4.json',
    'trainer_clown_lee_rematch_4.json',
    'trainer_poke_kid_ariel_rematch_4.json',
    'trainer_reporters_kinsey_rematch_4.json',
    'trainer_leader_volkner_fight_area.json',
    'trainer_elite_four_flint_fight_area.json',
    'trainer_rival_fight_area_piplup.json',
    'trainer_rival_fight_area_turtwig.json',
    'trainer_rival_fight_area_chimchar.json',
    'trainer_commander_mars_stark_mountain.json',
    'trainer_commander_jupiter_stark_mountain.json',
]

trainer_data_gen = generator(
    trainer_data_py,
    arguments: [ '@INPUT@', '@OUTPUT@', ],
    output: '@BASENAME@',
    depends: [ py_consts_generators ],
)

trainer_party_gen = generator(
    trainer_party_py,
    arguments: [ '@INPUT@', '@OUTPUT@', ],
    output: '@BASENAME@',
    depends: [ py_consts_generators ],
)

trainers_order = files('trainers.order')

trdata_narc = custom_target('trdata.narc',
    output: [
        'trdata.narc',
        'trdata.naix',
    ],
    input: trainer_data_gen.process(trainer_data_files, env: json2bin_env),
    depends: [ py_consts_generators ],
    command: [
        narc_exe,
        'create',
        '--order', trainers_order,
        '--output', '@OUTPUT0@',
        '--naix',
        '@PRIVATE_DIR@',
    ],
)
trdata_naix = trdata_narc[1]

# Do not generate an NAIX for `trpoke.narc`; it would go wholly unused
trpoke_narc = custom_target('trpoke.narc',
    output: 'trpoke.narc',
    input: trainer_party_gen.process(trainer_data_files, env: json2bin_env),
    depends: [ py_consts_generators ],
    command: [
        narc_exe, 'create',
        '--order', trainers_order,
        '--output', '@OUTPUT@',
        '@PRIVATE_DIR@',
    ]
)

nitrofs_files += trdata_narc
nitrofs_files += trpoke_narc
naix_headers += trdata_naix
